--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,7 @@
 *
     box-sizing: border-box
+$color-pink: #E1A2B5
+$color-orange: #FDCB98
 .container
     position: relative
     max-width: 1140px
@@ -17,7 +19,7 @@
         height: 69px
         align-items: center
     &__logo
-        height: 69px
+        height: 50px
     &__content-container
         position: relative
         display: flex
@@ -37,4 +39,63 @@
         a
             text-decoration: none
             color: black
+.right-wrapper
+    position: relative
+    width: 500px
+    top: 80px
+    right: -100px
+    &__text
+        font-size: 16px
+        margin-bottom: 20px
+.title
+    font-size: 72px
+    position: relative
+    font-weight: bold
+    margin: 20px 0px 20px 0px
+    &__hr
+        width: 140px
+        position: absolute
+        bottom: 0px
+        margin: 0
+        border: none
+        border-top: 1px solid black
+.icons
+    display: inline-flex
+    &__item
+        display: flex
+        justify-content: center
+        align-items: center
+        width: 40px
+        height: 40px
+        border: 1px solid $color-pink
+        border-radius: 100px
+        margin-right: 17px
+        &:last-child
+            margin-right: 0px
+        i
+            font-size: 21px
+.buttons
+    display: inline-flex
+    &__main-btn
+        margin-right: 32px
+        width: 200px
+        height: 60px
+        background-color: $color-orange
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+        border-radius: 100px
+        border: none
+        font-size: 18px
+        
+    &__icon-btn
+       display: inline-flex 
+       align-items: center
+       img
+           margin-right: 12px
+    &__text
+        font-size: 16px
+.elipse
+    width: 194px
+    height: 194px
+    background: linear-gradient(180deg, #FCCE9F 22.4%, rgba(244, 150, 149, 0.43) 48.96%, rgba(248, 194, 163, 0.5) 66.15%, #DA95A3 86.46%)
+    
 
