--- a/sass/style.sass
+++ b/sass/style.sass
@@ -24,6 +24,14 @@ $color-orange: #FDCB98
         position: relative
         display: flex
         flex-direction: row
+    &__first-elipse
+        position: absolute
+        top: 90px
+        right: 60px
+    &__second-elipse
+        position: absolute
+        right: -120px
+        top: 650px
 .nav-menu
     &__list
     
@@ -44,9 +52,10 @@ $color-orange: #FDCB98
     width: 500px
     top: 80px
     right: -100px
+    z-index: 5
     &__text
         font-size: 16px
-        margin-bottom: 20px
+        margin-bottom: 50px
 .title
     font-size: 72px
     position: relative
@@ -97,5 +106,21 @@ $color-orange: #FDCB98
     width: 194px
     height: 194px
     background: linear-gradient(180deg, #FCCE9F 22.4%, rgba(244, 150, 149, 0.43) 48.96%, rgba(248, 194, 163, 0.5) 66.15%, #DA95A3 86.46%)
+    border-radius: 150px
+    display: flex
+    justify-content: center
+    align-items: center
+    &_dig
+        width: 282px
+        height: 282px
+    &__subtract
+        width: 130px
+        height: 130px
+        background: #F0F0F0
+        border-radius: 150px
+        &_big
+            width: 188px
+            height: 188px
+
     
 
