--- a/sass/style.css
+++ b/sass/style.css
@@ -11,7 +11,6 @@
 .main-section {
   position: relative;
   min-height: 800px;
-  background: #F0F0F0;
   padding-top: 16px;
   overflow: hidden;
 }
@@ -146,8 +145,8 @@
 .elipse__subtract {
   width: 130px;
   height: 130px;
-  background: #F0F0F0;
   border-radius: 150px;
+  background-color: white;
 }
 .elipse__subtract_big {
   width: 188px;
@@ -184,13 +183,13 @@
 .second-section__first-elipse {
   position: absolute;
   top: 80px;
-  right: -60px;
+  right: -90px;
   z-index: -1;
 }
 .second-section__second-elipse {
   position: absolute;
-  top: 364px;
-  left: -60px;
+  top: 438px;
+  left: -90px;
   z-index: -1;
 }
 
