--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,7 +9,6 @@ $color-orange: #FDCB98
 .main-section
     position: relative
     min-height: 800px
-    background: #F0F0F0
     padding-top: 16px
     overflow: hidden
     &__nav-container
@@ -116,8 +115,8 @@ $color-orange: #FDCB98
     &__subtract
         width: 130px
         height: 130px
-        background: #F0F0F0
         border-radius: 150px
+        background-color: white
         &_big
             width: 188px
             height: 188px
@@ -144,12 +143,14 @@ $color-orange: #FDCB98
     &__first-elipse
         position: absolute
         top: 80px
-        right: -60px
+        right: -90px
         z-index: -1
+        
+       
     &__second-elipse
         position: absolute
-        top: 364px
-        left: -60px
+        top: 438px
+        left: -90px
         z-index: -1
 
 .cards-item
@@ -172,8 +173,6 @@ $color-orange: #FDCB98
         right: -90px
         font-weight: bold
         
-
-
 .icons-item
     display: inline-flex
     align-items: center
@@ -185,5 +184,5 @@ $color-orange: #FDCB98
         span
             font-size: 48px
             font-weight: bold
-    
+
 
